adding tests path.yml

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -2,6 +2,10 @@ name: E2E Tests
 
 on:
   workflow_dispatch:
+      inputs:
+        testsPath:
+          description: 'Path to Tests to be Executed'
+          default: 'google.tests.**'
 
 jobs:
     E2E_Chrome_Linux_Test:
