--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -8,25 +8,25 @@ on:
           default: 'google.tests.**'
 
 jobs:
-    E2E_Chrome_Linux_Test:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout Code
-          uses: actions/checkout@v4
+    # E2E_Chrome_Linux_Test:
+    #   runs-on: ubuntu-latest
+    #   steps:
+    #     - name: Checkout Code
+    #       uses: actions/checkout@v4
         
-        - name: Setup JDK 21
-          uses: actions/setup-java@v4
-          with:
-            distribution: 'zulu'
-            java-version: '21'
+    #     - name: Setup JDK 21
+    #       uses: actions/setup-java@v4
+    #       with:
+    #         distribution: 'zulu'
+    #         java-version: '21'
         
-        - name: Set up Maven
-          uses: stCarolas/setup-maven@v4.5
-          with:
-            maven-version: 3.9.6
-        - name: Run Tests
-          continue-on-error: true
-          run: mvn test -DbrowserType="chrome" -DheadlessExecution="true"  -Dtest="${{ github.event.inputs.testsPath }}"
+    #     - name: Set up Maven
+    #       uses: stCarolas/setup-maven@v4.5
+    #       with:
+    #         maven-version: 3.9.6
+    #     - name: Run Tests
+    #       continue-on-error: true
+    #       run: mvn test -DbrowserType="chrome" -DheadlessExecution="true"  -Dtest="${{ github.event.inputs.testsPath }}"
           
     E2E_Firefox_Windows_Test:
       runs-on: windows-latest
